# ChangeLog for dev-tcltk/tls
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tls/ChangeLog,v 1.18 2007/12/24 04:08:28 matsuu Exp $

  24 Dec 2007; MATSUU Takuto <matsuu@gentoo.org> tls-1.5.0-r1.ebuild:
  Added RESTRICT="test"

*tls-1.5.0-r1 (21 Jul 2007)

  21 Jul 2007; MATSUU Takuto <matsuu@gentoo.org>
  +files/tls-1.5.0-bad-version.patch, -tls-1.4.1.ebuild,
  +tls-1.5.0-r1.ebuild:
  Fixed to work with tcl-8.5, bug #173542.

  31 Mar 2007; Jeroen Roovers <jer@gentoo.org> tls-1.5.0.ebuild:
  Stable for HPPA too.

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> tls-1.5.0.ebuild:
  x86 stable

  26 Feb 2007; Simon Stelling <blubb@gentoo.org> tls-1.5.0.ebuild:
  amd64 stable; bug 168364

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  13 Sep 2006; Ferris McCormick <fmccor@gentoo.org> tls-1.5.0.ebuild:
  Stable on sparc.

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> tls-1.5.0.ebuild:
  Mark 1.5.0 stable on alpha

  02 Apr 2005; Jason Wever <weeve@gentoo.org> tls-1.4.1.ebuild:
  Stable on SPARC.

  10 Dec 2004; Andrej Kacian <ticho@gentoo.org> tls-1.5.0.ebuild:
  Made dependency on dev-lang/tk optional. Closes #73999, reported by Benjamin
  Smee (strerror) <ben@disciplina.net>.

*tls-1.5.0 (04 Apr 2004)

  04 Apr 2004; Chris Aniszczyk <zx@gentoo.org> tls-1.4.1.ebuild:
  Version bump and clean up.

  14 Jan 2004; Aron Griffis <agriffis@gentoo.org> tls-1.4.1.ebuild:
  stable on alpha

*tls-1.4.1 (31 Jan 2003)

  26 Dec 2003; Guy Martin <gmsoft@gentoo.org> tls-1.4.1.ebuild :
  Marked stable on hppa.

  31 Jan 2003; Arcady Genkin <agenkin@gentoo.org> :
  Initial version of the package.