@@ -1,5 +1,7 @@
 AUX tls-1.5.0-bad-version.patch 540 RMD160 8c22ff1deb92649adf0e686028238bb5d0455ec9 SHA1 99575663d2654305dd7fc7e1a3c458bcab589c6d SHA256 175048c3ff600b974c03e24d1451a570d8eda1c86f3ed42714736983978c9b2d
 DIST tls1.5.0-src.tar.gz 113600 RMD160 fa37bc819ffc63f93991c876ffd318405e6bad85 SHA1 66611f384f4b1c5e126ac8fc1cd03040bbe8ac16 SHA256 422ac2e4a812763a8f859b868c659d69769945ab754bd418b2eb07ce9bbcd253
+DIST tls1.6-src.tar.gz 168043 RMD160 7f833422dadcab06b3c251f5b7a67a0a1c8fe6a1 SHA1 badee4d0a096e9951ffc1f82a6530f78b2404a2c SHA256 adec50143a9ad634a671d24f7c7bbf2455487eb5f12d290f41797c32a98b93f3
 EBUILD tls-1.5.0-r1.ebuild 835 RMD160 1dfac3f1a6eb005f66d96d02af68999ff006211e SHA1 949f10dfb266bdd5ccb1c2c6658d2ed77fda3b94 SHA256 db5188378e8571543f7e6d2298f574f926915eca8d8c86feba0c80dac202d0ea
-MISC ChangeLog 1724 RMD160 38c31bf2e36324edf88f0ccfd6d7bc3cfd49d2da SHA1 980bd5cc2e3297cec8c390d368e3c34ceb18e5c2 SHA256 9e121738b8ae2d338794594b1407211b507eba4129f99df366f985ebbfddb192
+EBUILD tls-1.6.ebuild 755 RMD160 48f806a508935aff6055afb331113a3c42969da6 SHA1 4cea6cf093b139477ce59ad4c1f9121208e46e36 SHA256 03984d08935f99a1758848e981786a8d39d3bae7e042ae2050fdc5eefb2c16d0
+MISC ChangeLog 1851 RMD160 d05efc8e061f771dd3b68bf72a97b6b4d2562362 SHA1 5b5fcb51cc67daeda3ec5fbc634c6eb307574402 SHA256 e16f0cd9997e000a1c6da93de83c47114c6569b5fffbe66647ac000343a398b8
 MISC metadata.xml 158 RMD160 f197c34c7dd71f6025e93436e3f999137928554a SHA1 edb8e5ac668440e92e947fc3dff54484b28c7775 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290
